# Agentic-Systems

./: .env.example  1.ipynb  3.ipynb  README.md  Research_Agents.ipynb  output.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Flows/social_media_content_writer/: Readme  sample.ipynb  try.ipynb
Flows/social_media_content_writer/assets/: dfd5ddb3-75d3-49a5-9b89-ea775d80b4c0.md
Flows/social_media_content_writer/config/: planner_tasks.yaml
Flows/social_media_content_writer/output/: draft.json
Flows/test_flow/: pyproject.toml
Memory_Demo/: memory.ipynb
custom_knowledge_source/: weather_knowledge_source.ipynb
project/: research_crew.ipynb  research_crew.py
project/config/: tasks.yaml
