[project]
name = "agentic-systems"
version = "0.1.0"
description = "Portfolio repo demonstrating agentic AI workflows with CrewAI (Flows, Memory, Tools, Knowledge)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Tirumala Teja Yegineni" }
]
keywords = [
  "agentic-ai", "llm-agents", "crewai", "flows", "memory", "tool-calling", "grounding", "ollama"
]

dependencies = [
  # Core agent framework (matches Flows/test_flow/pyproject.toml)
  "crewai[tools]==1.5.0",

  # LLM + agent integrations
  "openai>=1.0.0",
  "llama-index>=0.10.0",

  # Utilities
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "pydantic>=2.0.0",
  "nest-asyncio>=1.6.0",

  # Local model example
  "ollama>=0.3.0",

  # Content / scraping tools used in notebooks
  "crewai-tools>=0.12.0",
  "firecrawl-py>=1.0.0",
  "html2text>=2024.2.26",

  # Notebook runtime (optional but convenient)
  "ipython>=8.0.0",
  "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "nbformat>=5.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".venv",
  "Flows/test_flow/.venv",
  "**/.ipynb_checkpoints",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
